--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -8,27 +8,10 @@
     mc:Ignorable="d">
     <SplitView x:Name="splitView" IsPaneOpen="False" DisplayMode="CompactInline" CompactPaneLength="50" OpenPaneLength="250" PanePlacement="Right">
         <SplitView.Pane>
-            <StackPanel Background="Gray">
+            <StackPanel Background="LightGray">
                 <Button x:Name="exitActionsPanel" Content="&#xE700;" FontFamily="Segoe MDL2 Assets" Width="50" Height="50" Background="Transparent" HorizontalAlignment="Right" Click="Toggle_ActionBar_Pressed"/>
-                <TextBlock Text="Actions" FontSize="30" HorizontalAlignment="Center" Margin="0,30,0,30" />
-                <Button x:Name="combineStrokesButton" Click="Combine_Strokes" Background="Transparent" Width="250" HorizontalContentAlignment="Stretch">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="&#xEC26;" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center"/>
-                        <TextBlock Text="Group Strokes" FontSize="18" VerticalAlignment="Center" Margin="20,0,0,0"/>
-                    </StackPanel>
-                </Button>
-                <Button x:Name="drawPathButton" Background="Transparent" Width="250" HorizontalContentAlignment="Stretch" Click="TestDrawPath">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="&#xF128;" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center"/>
-                        <TextBlock Text="Draw Path" FontSize="18" VerticalAlignment="Center" Margin="20,0,0,0"/>
-                    </StackPanel>
-                </Button>
-                <Button Click="Move_Selected_Mode" Background="Transparent" Width="250" HorizontalContentAlignment="Stretch">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="&#xE759;" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center"/>
-                        <TextBlock Text="Move Selected" FontSize="18" VerticalAlignment="Center" Margin="20,0,0,0"/>
-                    </StackPanel>
-                </Button>
+                <TextBlock Text="ANIMATIONS" FontSize="30" FontWeight="SemiLight" Margin="0,30,0,30" />
+                
                 <ListView x:Name="Animationlist" CanReorderItems="True" AllowDrop="True" CanDragItems="True">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -54,8 +37,8 @@
                 <CommandBar x:Name="commandBar" RequestedTheme="Dark" DefaultLabelPosition="Right">
                     <CommandBar.Content>
                         <InkToolbar x:Name="inkToolbar" TargetInkCanvas="{x:Bind inkCanvas}">
-                            <InkToolbarCustomToolButton x:Name="toolButtonLasso" Content="&#xEF20;" FontFamily="Segoe MDL2 Assets" Click="ToolButton_Lasso" ToolTipService.ToolTip="Select Strokes"/>
-                            <InkToolbarCustomToolButton x:Name="toolButtonComment" Content="&#xE90A;" FontFamily="Segoe MDL2 Assets" Click="ToolButton_Comment" ToolTipService.ToolTip="Comment Mode">
+                            <InkToolbarCustomToolButton x:Name="toolButtonLasso" Content="&#xEF20;" FontFamily="Segoe MDL2 Assets" ToolTipService.ToolTip="Select Strokes"/>
+                            <InkToolbarCustomToolButton x:Name="toolButtonComment" Content="&#xE90A;" FontFamily="Segoe MDL2 Assets"  ToolTipService.ToolTip="Comment Mode">
                                 <InkToolbarCustomToolButton.ContextFlyout>
                                     <Flyout x:Name="StickyFlyout">
                                         <StackPanel VerticalAlignment="Center" Orientation="Vertical">
