--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -10,7 +10,8 @@
         <SplitView.Pane>
             <StackPanel Background="LightGray">
                 <Button x:Name="exitActionsPanel" Content="&#xE700;" FontFamily="Segoe MDL2 Assets" Width="50" Height="50" Background="Transparent" HorizontalAlignment="Right" Click="Toggle_ActionBar_Pressed"/>
-                <TextBlock Text="Animations" FontSize="30" FontWeight="SemiLight" Margin="0,30,0,30" />
+                <TextBlock Text="Animations" FontSize="24" FontWeight="SemiLight" Margin="15,0,0,0"/>
+                <CheckBox x:Name="resetCheckbox" Content="Reset position after animation" Margin="15,0,0,0"/>
 
                 <ListView x:Name="Animationlist" SelectionMode="None" IsItemClickEnabled="False" CanReorderItems="True" AllowDrop="True" CanDragItems="True">
                     <ListView.ItemTemplate>
