--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -28,7 +28,7 @@
                                         <Button Click="Replay">
                                             <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE768;"/>
                                         </Button>
-                                        <Button Click="SettingsAnimation">
+                                        <Button Click="SettingsAnimation" FontFamily="Segoe UI">
                                             <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE713;"/>
                                         </Button>
                                         <Button Click="DeleteAnimation">
