--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -92,15 +92,19 @@
                     <Canvas x:Name="selectionCanvas"/>
                 </Grid>
                 <ScrollViewer Grid.Row="2" VerticalScrollMode="Auto" HorizontalScrollMode="Disabled">
-                    <StackPanel Background="{StaticResource animationWindowBackground}">
-                        <Canvas x:Name="animationViewer" Height="600">
-                            <Rectangle Fill="{StaticResource animationBlockColor}" Canvas.Left="0" Canvas.Top="0" Height="40" Width="100" Margin="10,0,0,0" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk"/>
-                            <Rectangle Fill="{StaticResource animationBlockColor}" Canvas.Left="0" Canvas.Top="40" Height="40" Width="150" Margin="10,10,0,0" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk"/>
-                            <Rectangle Fill="{StaticResource animationBlockColor}" Canvas.Left="0" Canvas.Top="90" Height="40" Width="150" Margin="10,10,0,10" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk"/>
-                            <Rectangle Fill="{StaticResource animationBlockColor}" Canvas.Left="0" Canvas.Top="140" Height="40" Width="150" Margin="10,10,0,10" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk"/>
-                            <Rectangle Fill="{StaticResource animationBlockColor}" Canvas.Left="0" Canvas.Top="190" Height="40" Width="150" Margin="10,10,0,10" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk"/>
-                        </Canvas>
-                    </StackPanel>
+                    <ListView x:Name="AnimationRepresentation" Background="{StaticResource animationWindowBackground}" SelectionMode="None" IsItemClickEnabled="False" CanReorderItems="True" AllowDrop="True" CanDragItems="True">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Background="{StaticResource animationWindowBackground}">
+                                    <Canvas>
+                                        <Border Background="{StaticResource animationBlockColor}" ManipulationMode="TranslateX" ManipulationDelta="Drag_AnimationChunk">
+                                            <TextBlock Text="{Binding name}" Height="40" Width="150"/>
+                                        </Border>
+                                    </Canvas>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
 
                 </ScrollViewer>
             </Grid>
