--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -93,7 +93,7 @@
                 
                 <Grid Grid.Row="2">
                     <InkCanvas x:Name="inkCanvas"/>
-                    <Canvas x:Name="canvas"/>
+                    <Canvas x:Name="canvas" Loaded="Canvas_Loaded"/>
                     <Canvas x:Name="selectionCanvas"/>
                 </Grid>
             </Grid>
